Implementada a funcionalidade de pagamento via paypal

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://www.paypal.com/sdk/js?client-id=ASdDVlGYGeSorAdYl-O2mmWnZZs9DMVDW58YrzJxtvheT56_RP0jtTBEgl3xljXAX4d32WtFQ1N7FWzp">
+  </script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
