Implementando o básico do que seria a experiência do usuário ao consumir um curso da plataforma

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://www.paypal.com/sdk/js?client-id=ASdDVlGYGeSorAdYl-O2mmWnZZs9DMVDW58YrzJxtvheT56_RP0jtTBEgl3xljXAX4d32WtFQ1N7FWzp">
   </script>
+  <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
