--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <script src="https://www.paypal.com/sdk/js?client-id=ASdDVlGYGeSorAdYl-O2mmWnZZs9DMVDW58YrzJxtvheT56_RP0jtTBEgl3xljXAX4d32WtFQ1N7FWzp">
   </script>
   <script src="https://www.youtube.com/iframe_api"></script>
+  <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
